sort.basic.lessons.sort.basic.comb.AlgCombSort11.scala.error
AlgCombSort11:10: error: illegal start of simple expression
      if (ecart==9) {
      ^